--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pandas
-numpy
-scikit-learn
-fastapi
+pandas~=2.0.3
+numpy~=1.24.4
+scikit-learn~=1.3.2
+fastapi~=0.110.0
 uvicorn
 python-multipart
+nltk~=3.8.1
+langdetect~=1.0.9
+pydantic~=2.6.3
